--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
         </div>
     </main>
-    <section role="button">
+    <section role="article">
         <div class="cta">
             <div class="cta-text">
                 <h2 class="cta-h">Ready To Build Your Community?</h2>
